feat: 添加Luminaire控制器，支持控制外接灯具并优化控制器切换功能

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -49,6 +49,22 @@
                     </div>
                 </section>
 
+                <!-- Controller Selection -->
+                <section class="card controller-card">
+                    <h2>Controller</h2>
+                    <div class="controller-display">
+                        <div class="controller-badge" id="currentController">LOCAL</div>
+                    </div>
+                    <div class="controller-buttons">
+                        <button class="controller-btn active" data-controller="local" disabled>
+                            <span>Local (8 LEDs)</span>
+                        </button>
+                        <button class="controller-btn" data-controller="luminaire" disabled>
+                            <span>Luminaire (72 LEDs)</span>
+                        </button>
+                    </div>
+                </section>
+
                 <!-- Mode Control -->
                 <section class="card mode-card">
                     <h2>Light Mode</h2>
