fix: 更新文档和代码以支持敏感信息的安全存储

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -146,27 +146,27 @@
                     </div>
                     <div class="weather-details">
                         <div class="weather-detail-item">
-                            <div class="detail-label">💧 Humidity</div>
+                            <div class="detail-label">Humidity</div>
                             <div class="detail-value" id="humidity">--%</div>
                         </div>
                         <div class="weather-detail-item">
-                            <div class="detail-label">💨 Wind</div>
+                            <div class="detail-label">Wind</div>
                             <div class="detail-value" id="windSpeed">-- km/h</div>
                         </div>
                         <div class="weather-detail-item">
-                            <div class="detail-label">👁 Visibility</div>
+                            <div class="detail-label">Visibility</div>
                             <div class="detail-value" id="visibility">-- km</div>
                         </div>
                         <div class="weather-detail-item">
-                            <div class="detail-label">🌡 Feels Like</div>
+                            <div class="detail-label">Feels Like</div>
                             <div class="detail-value" id="feelsLike">--°C</div>
                         </div>
                         <div class="weather-detail-item">
-                            <div class="detail-label">☁️ Cloud Cover</div>
+                            <div class="detail-label">Cloud Cover</div>
                             <div class="detail-value" id="cloudCover">--%</div>
                         </div>
                         <div class="weather-detail-item">
-                            <div class="detail-label">🌧 Precipitation</div>
+                            <div class="detail-label">Precipitation</div>
                             <div class="detail-value" id="precipitation">-- mm</div>
                         </div>
                     </div>
